refactoring: run the postman tests (174 of 210)