@@ -3,6 +3,8 @@ package kz.zzhalelov.server.category;
 import kz.zzhalelov.server.category.dto.CategoryMapper;
 import kz.zzhalelov.server.category.dto.CategoryResponseDto;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.*;
 
@@ -26,9 +28,13 @@ public class PublicCategoryController {
     //GET /categories
     @GetMapping
     @ResponseStatus(HttpStatus.OK)
-    public List<CategoryResponseDto> findAll() {
-        return categoryService.findAll().stream()
+    public List<CategoryResponseDto> findAll(@RequestParam(defaultValue = "0") int from,
+                                             @RequestParam(defaultValue = "10") int size) {
+        Pageable pageable = PageRequest.of(from / size, size);
+        return categoryService.findAll(pageable)
+                .stream()
                 .map(categoryMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
+
     }
 }
